Fix support disclaimer
Signed-off-by: 林博仁(Buo-ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -25,7 +25,7 @@ description: |
 
   If you think you'd prefer Alesan's Entities, you can find it [Here.](http://forum.stabyourself.net/viewtopic.php?f=13&t=3636) (please don't leave us)
 
-  NOTE: This is NOT an official Mari0: Community Edition distribution, refer [the snap's issue tracker](https://github.com/Lin-Buo-Ren/mari0-ce-snap/issues) for more details
+  NOTE: This is NOT an official Mari0: Community Edition distribution, refer [the snap's issue tracker](https://github.com/Lin-Buo-Ren/mari0-ce-snap/issues) for support
 
 icon: snap/gui/mari0-icon.256px.scaled.png
 license: WTFPL
